# Solana-AMM-Native-Rust

./: .gitignore  Cargo.toml  DEPLOYMENT_SUMMARY.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_GUIDE.md  README.md
client/: example.ts  package.json
frontend/: README.md  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AmmInterface.tsx  Header.tsx  LiquidityInterface.tsx  LoadingSpinner.tsx  NotificationProvider.tsx  PoolCreation.tsx  StatsCard.tsx  SwapInterface.tsx  TokenSelector.tsx  WalletProvider.tsx
frontend/src/lib/: amm-client.ts
scripts/: deploy.sh
src/: lib.rs
