[package]
name = "solana-amm"
version = "0.1.0"
edition = "2021"
description = "A constant-product automated market maker (AMM) for Solana supporting both legacy SPL tokens and Token-2022"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
# Core Solana dependencies
solana-program = "~1.16.0"
borsh = "~0.9.0"

# SPL Token dependencies - supporting both legacy and Token-2022
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~0.9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.1.0", features = ["no-entrypoint"] }

# Math and utility dependencies
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
# Testing dependencies
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
